--- a/A-A-C/notebooks/predict_aptos_wallet.ipynb
+++ b/A-A-C/notebooks/predict_aptos_wallet.ipynb
@@ -6,25 +6,28 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-15T10:28:31.049027Z",
-     "start_time": "2025-07-15T10:28:30.937870Z"
+     "end_time": "2025-07-16T15:37:21.464896Z",
+     "start_time": "2025-07-16T15:37:21.337156Z"
     }
    },
    "source": [
-    "# --- 1. IMPORT THƯ VIỆN VÀ ĐỊNH NGHĨA HÀM ---\n",
+    "# --- 1. SETUP & FUNCTION DEFINITIONS ---\n",
     "\n",
+    "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "import json\n",
     "import time\n",
     "from datetime import datetime, timezone\n",
     "import collections\n",
     "import joblib\n",
     "import os\n",
+    "import warnings\n",
     "\n",
-    "# QUAN TRỌNG: Định nghĩa lại hàm cyclical_encoder để joblib có thể tải pipeline\n",
-    "# (Copy từ notebook training)\n",
+    "# Suppress warnings for a clean output\n",
+    "warnings.filterwarnings('ignore', category=UserWarning)\n",
+    "\n",
+    "# IMPORTANT: This function is required for joblib to load the pipeline\n",
     "def cyclical_encoder(X):\n",
     "    X_encoded = np.array([])\n",
     "    max_vals = [23, 6, 12]\n",
@@ -39,33 +42,11 @@
     "            X_encoded = np.concatenate([X_encoded, X_sin, X_cos], axis=1)\n",
     "    return X_encoded\n",
     "\n",
-    "print(\"✅ Các thư viện và hàm tùy chỉnh đã sẵn sàng.\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Các thư viện và hàm tùy chỉnh đã sẵn sàng.\n"
-     ]
-    }
-   ],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-15T10:28:31.194458Z",
-     "start_time": "2025-07-15T10:28:31.176680Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# --- 2. CÁC HÀM THU THẬP DỮ LIỆU ---\n",
-    "\n",
+    "# --- Blockchain Data Fetching Functions ---\n",
     "NODE_URL = \"https://fullnode.mainnet.aptoslabs.com/v1\"\n",
     "\n",
     "def get_all_transactions(session, address):\n",
+    "    # ... (Hàm này giữ nguyên)\n",
     "    all_transactions = []\n",
     "    start = 0\n",
     "    limit = 100\n",
@@ -85,6 +66,7 @@
     "    return all_transactions\n",
     "\n",
     "def get_wallet_resources(session, address):\n",
+    "    # ... (Hàm này giữ nguyên)\n",
     "    try:\n",
     "        response = session.get(f\"{NODE_URL}/accounts/{address}/resources\")\n",
     "        response.raise_for_status()\n",
@@ -92,49 +74,53 @@
     "    except requests.exceptions.RequestException:\n",
     "        return []\n",
     "\n",
-    "# NÂNG CẤP: Hàm này được sửa lại để tạo ra các feature giống hệt lúc train\n",
-    "def create_feature_dataframe(session, address):\n",
+    "# NÂNG CẤP: Hàm này được sửa lại để trả về cả DataFrame cho model và Dictionary để ghi log\n",
+    "def create_wallet_data(session, address):\n",
     "    all_transactions = get_all_transactions(session, address)\n",
     "    resources = get_wallet_resources(session, address)\n",
     "\n",
-    "    # Khởi tạo profile với các giá trị mặc định\n",
-    "    profile = {\n",
-    "        'wallet_age_days': 0, 'apt_balance': 0, 'other_token_count': 0,\n",
-    "        'total_transaction_count': 0, 'successful_transaction_count': 0, 'failed_transaction_count': 0,\n",
-    "        'unique_interacted_contracts': 0, 'unique_interacted_addresses': 0,\n",
-    "        'avg_time_between_tx_seconds': -1, 'std_dev_time_between_tx_seconds': -1,\n",
-    "        'most_active_hour': -1, 'is_self_funded': 1,\n",
-    "        # Thêm các feature mới giống lúc train\n",
-    "        'tx_day_of_week': -1, 'tx_month': -1, 'tx_day_of_month': -1,\n",
-    "        'success_rate': 0, 'new_contract_rate': 0, 'balance_per_tx': 0\n",
+    "    # Dữ liệu mặc định\n",
+    "    profile_dict = {\n",
+    "        'wallet_address': address, 'label': -1, # label sẽ được cập nhật sau khi dự đoán\n",
+    "        'first_transaction_date': None, 'wallet_age_days': 0, 'apt_balance': 0,\n",
+    "        'other_token_count': 0, 'total_transaction_count': 0, 'successful_transaction_count': 0,\n",
+    "        'failed_transaction_count': 0, 'unique_interacted_contracts': 0,\n",
+    "        'unique_interacted_addresses': 0, 'avg_time_between_tx_seconds': -1,\n",
+    "        'std_dev_time_between_tx_seconds': -1, 'most_active_hour': -1,\n",
+    "        'most_active_weekday': \"N/A\", 'is_self_funded': 1\n",
     "    }\n",
     "\n",
     "    if not all_transactions:\n",
-    "        print(f\"!!! CẢNH BÁO: Không tìm thấy giao dịch nào cho ví {address}\")\n",
-    "        return pd.DataFrame([profile])\n",
+    "        print(f\"⚠️ WARNING: No transactions found for wallet {address}\")\n",
+    "        # Trả về cả hai định dạng\n",
+    "        return pd.DataFrame([profile_dict]), profile_dict\n",
     "\n",
-    "    # Tính toán các feature cơ bản\n",
-    "    profile['total_transaction_count'] = len(all_transactions)\n",
-    "    profile['successful_transaction_count'] = sum(1 for tx in all_transactions if tx['success'])\n",
-    "    profile['failed_transaction_count'] = profile['total_transaction_count'] - profile['successful_transaction_count']\n",
+    "    # Tính toán các feature\n",
+    "    profile_dict['total_transaction_count'] = len(all_transactions)\n",
+    "    profile_dict['successful_transaction_count'] = sum(1 for tx in all_transactions if tx['success'])\n",
+    "    profile_dict['failed_transaction_count'] = profile_dict['total_transaction_count'] - profile_dict['successful_transaction_count']\n",
     "\n",
-    "    # Tính toán các feature thời gian\n",
     "    first_tx = all_transactions[-1]\n",
     "    first_tx_timestamp = int(first_tx['timestamp']) // 1000000\n",
     "    creation_datetime = datetime.fromtimestamp(first_tx_timestamp, tz=timezone.utc)\n",
-    "    profile['wallet_age_days'] = (datetime.now(timezone.utc) - creation_datetime).days\n",
-    "    profile['tx_day_of_week'] = creation_datetime.dayofweek # 0=Thứ 2, 6=Chủ Nhật\n",
-    "    profile['tx_month'] = creation_datetime.month\n",
-    "    profile['tx_day_of_month'] = creation_datetime.day\n",
+    "    profile_dict['first_transaction_date'] = creation_datetime.strftime('%Y-%m-%d %H:%M:%S UTC')\n",
+    "    profile_dict['wallet_age_days'] = (datetime.now(timezone.utc) - creation_datetime).days\n",
     "\n",
     "    timestamps = sorted([int(tx['timestamp']) // 1000000 for tx in all_transactions])\n",
-    "    hours = [datetime.fromtimestamp(ts, tz=timezone.utc).hour for ts in timestamps]\n",
-    "    if hours:\n",
-    "        profile['most_active_hour'] = collections.Counter(hours).most_common(1)[0][0]\n",
+    "    if len(timestamps) > 1:\n",
+    "        time_diffs = np.diff(timestamps)\n",
+    "        profile_dict['avg_time_between_tx_seconds'] = float(np.mean(time_diffs))\n",
+    "        profile_dict['std_dev_time_between_tx_seconds'] = float(np.std(time_diffs))\n",
     "\n",
-    "    # Các feature khác\n",
+    "    hours = [datetime.fromtimestamp(ts, tz=timezone.utc).hour for ts in timestamps]\n",
+    "    weekdays = [datetime.fromtimestamp(ts, tz=timezone.utc).strftime('%A') for ts in timestamps]\n",
+    "    if hours:\n",
+    "        profile_dict['most_active_hour'] = collections.Counter(hours).most_common(1)[0][0]\n",
+    "    if weekdays:\n",
+    "        profile_dict['most_active_weekday'] = collections.Counter(weekdays).most_common(1)[0][0]\n",
+    "\n",
     "    if first_tx.get('sender') != address:\n",
-    "        profile['is_self_funded'] = 0\n",
+    "        profile_dict['is_self_funded'] = 0\n",
     "\n",
     "    apt_balance = 0\n",
     "    other_token_count = 0\n",
@@ -143,20 +129,62 @@
     "            apt_balance = int(resource['data']['coin']['value']) / 10**8\n",
     "        elif resource['type'].startswith('0x1::coin::CoinStore<'):\n",
     "            other_token_count += 1\n",
-    "    profile['apt_balance'] = apt_balance\n",
-    "    profile['other_token_count'] = other_token_count\n",
+    "    profile_dict['apt_balance'] = apt_balance\n",
+    "    profile_dict['other_token_count'] = other_token_count\n",
     "\n",
-    "    interacted_contracts = {tx['payload']['function'].split('::')[0] for tx in all_transactions if tx['payload'].get('function')}\n",
-    "    profile['unique_interacted_contracts'] = len(interacted_contracts)\n",
+    "    interacted_contracts = {tx['payload']['function'].split('::')[0] for tx in all_transactions if tx.get('payload') and tx['payload'].get('function')}\n",
+    "    profile_dict['unique_interacted_contracts'] = len(interacted_contracts)\n",
     "\n",
-    "    # Tính các feature tỷ lệ\n",
-    "    profile['success_rate'] = profile['successful_transaction_count'] / (profile['total_transaction_count'] + 1e-6)\n",
-    "    profile['new_contract_rate'] = profile['unique_interacted_contracts'] / (profile['total_transaction_count'] + 1e-6)\n",
-    "    profile['balance_per_tx'] = profile['apt_balance'] / (profile['total_transaction_count'] + 1e-6)\n",
+    "    interacted_addresses = {arg for tx in all_transactions if tx.get('payload') and tx['payload'].get('arguments') for arg in tx['payload']['arguments'] if isinstance(arg, str) and arg.startswith('0x') and len(arg) > 40}\n",
+    "    profile_dict['unique_interacted_addresses'] = len(interacted_addresses - {address})\n",
     "\n",
-    "    return pd.DataFrame([profile])\n",
+    "    # Tạo DataFrame cho mô hình (sẽ có thêm các cột phụ sau này)\n",
+    "    model_input_df = pd.DataFrame([profile_dict])\n",
     "\n",
-    "print(\"✅ Các hàm thu thập dữ liệu đã sẵn sàng.\")"
+    "    # Tạo các cột phụ cần thiết cho mô hình từ các dữ liệu đã tính\n",
+    "    model_input_df['tx_day_of_week'] = creation_datetime.weekday()\n",
+    "    model_input_df['tx_month'] = creation_datetime.month\n",
+    "    model_input_df['tx_day_of_month'] = creation_datetime.day\n",
+    "    model_input_df['success_rate'] = profile_dict['successful_transaction_count'] / (profile_dict['total_transaction_count'] + 1e-6)\n",
+    "    model_input_df['new_contract_rate'] = profile_dict['unique_interacted_contracts'] / (profile_dict['total_transaction_count'] + 1e-6)\n",
+    "    model_input_df['balance_per_tx'] = profile_dict['apt_balance'] / (profile_dict['total_transaction_count'] + 1e-6)\n",
+    "\n",
+    "    return model_input_df, profile_dict\n",
+    "\n",
+    "print(\"✅ All necessary functions are defined and ready.\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ All necessary functions are defined and ready.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-16T15:37:21.821411Z",
+     "start_time": "2025-07-16T15:37:21.629252Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# --- 2. LOAD THE PRE-TRAINED AI PIPELINE ---\n",
+    "\n",
+    "PIPELINE_PATH = 'C:/A-A-C/models/aptos_pro_pipeline.joblib'\n",
+    "\n",
+    "try:\n",
+    "    loaded_pipeline = joblib.load(PIPELINE_PATH)\n",
+    "    print(\"✅ AI Pipeline loaded successfully.\")\n",
+    "    print(\"   You can now proceed to Cell 3 to predict any wallet.\")\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"❌ ERROR: Pipeline file not found at '{PIPELINE_PATH}'.\")\n",
+    "    print(\"   Please run the 'train_aptos.ipynb' notebook first to create the pipeline file.\")\n",
+    "    loaded_pipeline = None"
    ],
    "id": "85f54a01abe8fafd",
    "outputs": [
@@ -164,7 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Các hàm thu thập dữ liệu đã sẵn sàng.\n"
+      "✅ AI Pipeline loaded successfully.\n",
+      "   You can now proceed to Cell 3 to predict any wallet.\n"
      ]
     }
    ],
@@ -173,24 +202,70 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T10:28:31.400458Z",
-     "start_time": "2025-07-15T10:28:31.226247Z"
+     "end_time": "2025-07-16T15:40:04.083029Z",
+     "start_time": "2025-07-16T15:37:21.900524Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# --- 3. TẢI PIPELINE AI ---\n",
+    "# --- 3. LIVE WALLET PREDICTOR & LOGGER ---\n",
     "\n",
-    "PIPELINE_PATH = 'C:/A-A-C/models/aptos_pro_pipeline.joblib'\n",
+    "# ==================================================================\n",
+    "# ==> INPUT THE WALLET ADDRESS YOU WANT TO ANALYZE HERE <==\n",
+    "# ==================================================================\n",
+    "wallet_to_predict = \"0x983fe110ab9a83bd43da49260d064017af8527826957e7ebd057ba50a7b2458e g\"\n",
+    "# ==================================================================\n",
+    "# ==> DEFINE THE LOG FILE PATH <==\n",
+    "# ==================================================================\n",
+    "LOG_CSV_PATH = 'C:/A-A-C/data/raw/prediction_log.csv'\n",
+    "# ==================================================================\n",
     "\n",
-    "try:\n",
-    "    # Chỉ cần tải pipeline, không cần scaler riêng nữa\n",
-    "    loaded_pipeline = joblib.load(PIPELINE_PATH)\n",
-    "    print(\"✅ Tải thành công pipeline AI.\")\n",
-    "except FileNotFoundError:\n",
-    "    print(f\"❌ LỖI: Không tìm thấy file pipeline tại '{PIPELINE_PATH}'.\")\n",
-    "    print(\"   Vui lòng chạy notebook 'train_aptos.ipynb' để tạo file pipeline trước.\")\n",
-    "    loaded_pipeline = None"
+    "\n",
+    "if 'loaded_pipeline' in locals() and loaded_pipeline is not None:\n",
+    "    print(f\"--- 1. Fetching live data for wallet: {wallet_to_predict[:15]}... ---\")\n",
+    "    session = requests.Session()\n",
+    "\n",
+    "    # Lấy cả DataFrame cho model và Dictionary để ghi log\n",
+    "    model_input_df, log_data_dict = create_wallet_data(session, wallet_to_predict)\n",
+    "\n",
+    "    print(\"\\n--- 2. Running prediction ---\")\n",
+    "    prediction = loaded_pipeline.predict(model_input_df)\n",
+    "\n",
+    "    # --- 3. Display simple result on screen ---\n",
+    "    result_label = \"SYBIL (Suspicious)\" if prediction[0] == 1 else \"NORMAL (Likely a regular user)\"\n",
+    "    print(\"\\n\" + \"=\"*30)\n",
+    "    print(\"--- PREDICTION RESULT ---\")\n",
+    "    print(f\"  Wallet: {wallet_to_predict}\")\n",
+    "    print(f\"  Result: {result_label}\")\n",
+    "    print(\"=\"*30)\n",
+    "\n",
+    "    # --- 4. Prepare and save detailed data to log file ---\n",
+    "    # Cập nhật nhãn dự đoán vào dictionary\n",
+    "    log_data_dict['label'] = prediction[0]\n",
+    "\n",
+    "    # Chọn ra chính xác các cột bạn yêu cầu để ghi log\n",
+    "    columns_to_log = [\n",
+    "        'wallet_address', 'label', 'first_transaction_date', 'wallet_age_days',\n",
+    "        'apt_balance', 'other_token_count', 'total_transaction_count',\n",
+    "        'successful_transaction_count', 'failed_transaction_count',\n",
+    "        'unique_interacted_contracts', 'unique_interacted_addresses',\n",
+    "        'avg_time_between_tx_seconds', 'std_dev_time_between_tx_seconds',\n",
+    "        'most_active_hour', 'most_active_weekday', 'is_self_funded'\n",
+    "    ]\n",
+    "\n",
+    "    # Tạo DataFrame chỉ với các cột cần ghi log\n",
+    "    log_df = pd.DataFrame([log_data_dict])[columns_to_log]\n",
+    "\n",
+    "    try:\n",
+    "        file_exists = os.path.isfile(LOG_CSV_PATH)\n",
+    "        # Dùng mode 'a' (append) để ghi thêm vào cuối file\n",
+    "        log_df.to_csv(LOG_CSV_PATH, mode='a', header=not file_exists, index=False)\n",
+    "        print(f\"\\n✅ Successfully logged detailed features to: {LOG_CSV_PATH}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"\\n❌ ERROR: Could not write to log file. Details: {e}\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"\\n❌ Cannot proceed. Please run Cell 2 to load the AI pipeline first.\")"
    ],
    "id": "3b728b879f0f82a9",
    "outputs": [
@@ -198,75 +273,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Tải thành công pipeline AI.\n"
+      "--- 1. Fetching live data for wallet: 0x983fe110ab9a8... ---\n",
+      "\n",
+      "--- 2. Running prediction ---\n",
+      "\n",
+      "==============================\n",
+      "--- PREDICTION RESULT ---\n",
+      "  Wallet: 0x983fe110ab9a83bd43da49260d064017af8527826957e7ebd057ba50a7b2458e\n",
+      "  Result: SYBIL (Suspicious)\n",
+      "==============================\n",
+      "\n",
+      "✅ Successfully logged detailed features to: C:/A-A-C/data/raw/prediction_log.csv\n"
      ]
     }
    ],
    "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-15T10:28:32.045461Z",
-     "start_time": "2025-07-15T10:28:31.448998Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# --- 4. NHẬP VÍ VÀ DỰ ĐOÁN ---\n",
-    "\n",
-    "if loaded_pipeline:\n",
-    "    # ĐIỀN ĐỊA CHỈ VÍ BẠN MUỐN KIỂM TRA VÀO ĐÂY\n",
-    "    wallet_to_predict = \"0x3a1f89c3768e0ec0fa92aeafbc5bb233e1ae0863dc33cd79f1f0f1e1acdad42b\"\n",
-    "\n",
-    "    print(f\"--- Bắt đầu lấy dữ liệu và tạo feature cho ví: {wallet_to_predict} ---\")\n",
-    "    session = requests.Session()\n",
-    "    # 1. Tạo DataFrame feature thô\n",
-    "    wallet_df = create_feature_dataframe(session, wallet_to_predict)\n",
-    "\n",
-    "    print(\"\\n--- Thực hiện dự đoán bằng pipeline ---\")\n",
-    "    # 2. Đưa thẳng DataFrame vào pipeline. Pipeline sẽ tự động xử lý mọi thứ.\n",
-    "    prediction = loaded_pipeline.predict(wallet_df)\n",
-    "    prediction_proba = loaded_pipeline.predict_proba(wallet_df)\n",
-    "\n",
-    "    # --- Hiển thị kết quả ---\n",
-    "    print(\"\\n================ KẾT QUẢ DỰ ĐOÁN ================\")\n",
-    "    result_label = \"SYBIL (Đáng nghi)\" if prediction[0] == 1 else \"NORMAL (Người dùng thường)\"\n",
-    "    confidence = prediction_proba[0][prediction[0]] * 100\n",
-    "\n",
-    "    print(f\"Ví: {wallet_to_predict}\")\n",
-    "    print(f\"==> Kết quả: {result_label}\")\n",
-    "    print(f\"==> Độ tin cậy của mô hình: {confidence:.2f}%\")\n",
-    "    print(\"-------------------------------------------------\")\n",
-    "    print(f\"Xác suất là Normal (0): {prediction_proba[0][0]*100:.2f}%\")\n",
-    "    print(f\"Xác suất là Sybil (1):  {prediction_proba[0][1]*100:.2f}%\")\n",
-    "    print(\"=================================================\")\n",
-    "else:\n",
-    "    print(\"❌ Không thể dự đoán vì pipeline chưa được tải.\")"
-   ],
-   "id": "be19eaf146602cf8",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Bắt đầu lấy dữ liệu và tạo feature cho ví: 0x3a1f89c3768e0ec0fa92aeafbc5bb233e1ae0863dc33cd79f1f0f1e1acdad42b ---\n",
-      "!!! CẢNH BÁO: Không tìm thấy giao dịch nào cho ví 0x3a1f89c3768e0ec0fa92aeafbc5bb233e1ae0863dc33cd79f1f0f1e1acdad42b\n",
-      "\n",
-      "--- Thực hiện dự đoán bằng pipeline ---\n",
-      "\n",
-      "================ KẾT QUẢ DỰ ĐOÁN ================\n",
-      "Ví: 0x3a1f89c3768e0ec0fa92aeafbc5bb233e1ae0863dc33cd79f1f0f1e1acdad42b\n",
-      "==> Kết quả: SYBIL (Đáng nghi)\n",
-      "==> Độ tin cậy của mô hình: 65.10%\n",
-      "-------------------------------------------------\n",
-      "Xác suất là Normal (0): 34.90%\n",
-      "Xác suất là Sybil (1):  65.10%\n",
-      "=================================================\n"
-     ]
-    }
-   ],
-   "execution_count": 4
   }
  ],
  "metadata": {
