--- a/A-A-C/notebooks/testTrainAIaptos.ipynb
+++ b/A-A-C/notebooks/testTrainAIaptos.ipynb
@@ -585,3 +585,84 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
+
+# --- 7. COMPREHENSIVE MODEL PERFORMANCE DASHBOARD ---
+
+if 'y_pred_test' in locals() and 'y_pred_proba_test' in locals():
+    print("\n" + "="*80)
+    print("--- AI MODEL PERFORMANCE DASHBOARD ---")
+    print("="*80)
+
+    # --- A. CALCULATE ALL NECESSARY METRICS ---
+    accuracy = accuracy_score(y_test, y_pred_test)
+    roc_auc = roc_auc_score(y_test, y_pred_proba_test)
+    report_dict = classification_report(y_test, y_pred_test, target_names=['Non-Sybil', 'Sybil'], output_dict=True)
+
+    # Metrics for the 'Sybil' class
+    precision_sybil = report_dict['Sybil']['precision']
+    recall_sybil = report_dict['Sybil']['recall']
+    f1_sybil = report_dict['Sybil']['f1-score']
+
+    # Confusion Matrix values
+    cm = confusion_matrix(y_test, y_pred_test)
+    tn, fp, fn, tp = cm.flatten()
+
+    # --- B. CREATE THE COMPREHENSIVE DASHBOARD PLOT ---
+    fig, ax = plt.subplots(2, 2, figsize=(22, 20))
+    ((ax1, ax2), (ax3, ax4)) = ax
+
+    fig.suptitle('AI Model Performance Dashboard - Sybil Wallet Detection', fontsize=26, y=0.98)
+
+    # --- Plot 1: Key Performance Indicators (KPIs) ---
+    ax1.axis('off')
+    ax1.set_title('I. Key Performance Indicators', fontsize=20, pad=20)
+
+    metrics_text = (
+        f"Test Set Size: {len(y_test)} samples\n\n"
+        f"🎯 **Overall Accuracy:** {accuracy:.2%}\n"
+        f"📈 **AUC - ROC Score:** {roc_auc:.4f}\n\n"
+        "--- 'Sybil' Detection Performance ---\n"
+        f"🔍 **Precision:** {precision_sybil:.2%} (Correctly flagged as Sybil)\n"
+        f"🎯 **Recall (Sensitivity):** {recall_sybil:.2%} (Actual Sybils found)\n"
+        f"📊 **F1-Score:** {f1_sybil:.4f} (Balance of Precision & Recall)"
+    )
+
+    ax1.text(0.5, 0.5, metrics_text, ha='center', va='center', fontsize=16,
+             bbox=dict(boxstyle="round,pad=0.5", fc="#f0f8ff", ec="#4682b4", lw=2))
+
+    # --- Plot 2: Enhanced Confusion Matrix ---
+    ax2.set_title('II. Confusion Matrix', fontsize=20, pad=20)
+    cm_percent = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]
+    labels = (np.asarray([f"TN = {tn}\n({cm_percent[0,0]:.1%})", f"FP = {fp}\n({cm_percent[0,1]:.1%})",
+                          f"FN = {fn}\n({cm_percent[1,0]:.1%})", f"TP = {tp}\n({cm_percent[1,1]:.1%})"])
+             ).reshape(2, 2)
+
+    sns.heatmap(cm, annot=labels, fmt='', cmap='Blues', ax=ax2,
+                xticklabels=['Predicted: Non-Sybil', 'Predicted: Sybil'],
+                yticklabels=['Actual: Non-Sybil', 'Actual: Sybil'],
+                annot_kws={"size": 18, "weight": "bold"}, cbar=False)
+    ax2.set_xlabel('Model Prediction', fontsize=16)
+    ax2.set_ylabel('Actual Label', fontsize=16)
+
+    # --- Plot 3: Receiver Operating Characteristic (ROC) Curve ---
+    ax3.set_title('III. ROC Curve', fontsize=20, pad=20)
+    RocCurveDisplay.from_predictions(y_test, y_pred_proba_test, ax=ax3, name=f'Model (AUC = {roc_auc:.4f})')
+    ax3.plot([0, 1], [0, 1], 'k--', label='Random Classifier (AUC = 0.50)')
+    ax3.legend(fontsize=12)
+    ax3.set_xlabel('False Positive Rate', fontsize=14)
+    ax3.set_ylabel('True Positive Rate (Recall)', fontsize=14)
+
+    # --- Plot 4: Precision-Recall Curve ---
+    ax4.set_title('IV. Precision-Recall Curve', fontsize=20, pad=20)
+    PrecisionRecallDisplay.from_predictions(y_test, y_pred_proba_test, ax=ax4, name='Model')
+    ax4.legend(fontsize=12)
+    ax4.set_xlabel('Recall (True Positive Rate)', fontsize=14)
+    ax4.set_ylabel('Precision', fontsize=14)
+
+    # --- C. DISPLAY THE PLOT ---
+    plt.tight_layout(rect=[0, 0.03, 1, 0.95])
+    plt.show()
+
+else:
+    print("❌ No prediction results found to generate the dashboard.")
